trace-cmd: Fix broken profile command

Recent changes in creating trace.dat files broke the streams, used
internaly by the trace-cmd profile command.

Link: https://lore.kernel.org/linux-trace-devel/20210514075241.65418-1-tz.stoyanov@gmail.com

Bugzilla: https://bugzilla.kernel.org/show_bug.cgi?id=213045
Reported-by: Jerome Marchand  <jmarchan@redhat.com>
Fixes: 1762536da ("trace-cmd: Have tracecmd_read_headers() specify the state to read up to")
Signed-off-by: Tzvetomir Stoyanov (VMware) <tz.stoyanov@gmail.com>
Signed-off-by: Steven Rostedt (VMware) <rostedt@goodmis.org>